// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDroppable can be given ReactElement children 1`] = `
<div
  class="euiDroppable euiDroppable--noGrow"
  data-rbd-droppable-context-id="2"
  data-rbd-droppable-id="testDroppable"
  data-test-subj="droppable"
>
  <div />
  <div
    class="euiDroppable__placeholder"
  />
</div>
`;

exports[`EuiDroppable can be given multiple ReactElement children 1`] = `
<div
  class="euiDroppable euiDroppable--noGrow"
  data-rbd-droppable-context-id="3"
  data-rbd-droppable-id="testDroppable"
  data-test-subj="droppable"
>
  <div />
  <div />
  <div />
  <div
    class="euiDroppable__placeholder"
  />
</div>
`;

exports[`EuiDroppable is rendered 1`] = `
<div
  class="euiDroppable euiDroppable--noGrow"
  data-rbd-droppable-context-id="1"
  data-rbd-droppable-id="testDroppable"
  data-test-subj="droppable"
>
  <div />
  <div
    class="euiDroppable__placeholder"
  />
</div>
`;
